<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/maintitletextview"
            style="@style/HeaderStyle"
            android:layout_height="40dp"
            android:text="@string/six_tips" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/maintitletextview"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/imageview1" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/maintitletextview"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/imageview2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tipButton1"
                style="@style/TipButtonStyle"
                android:layout_weight="1"
                android:text="@string/tip_one" />

            <Button
                android:id="@+id/tipButton2"
                style="@style/TipButtonStyle"
                android:layout_weight="1"
                android:text="@string/tip_two" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/imageview3" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/imageview4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tipButton3"
                style="@style/TipButtonStyle"
                android:layout_weight="1"
                android:text="@string/tip_three" />

            <Button
                android:id="@+id/tipButton4"
                style="@style/TipButtonStyle"
                android:layout_weight="1"
                android:text="@string/tip_four" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/imageview5" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/imageview6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tipButton5"
                style="@style/TipButtonStyle"
                android:layout_weight="1"
                android:text="@string/tip_five" />

            <Button
                android:id="@+id/tipButton6"
                style="@style/TipButtonStyle"
                android:layout_weight="1"
                android:text="@string/tip_six" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/Sienna"
            android:padding="8dp"
            android:onClick="sendMessage"
            android:text="@string/sendMessage"
            android:textColor="@color/White"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>