<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.espressomakingassistant.Tip6Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textViewTip6Title"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_six" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewTip6Title"
            android:layout_marginTop="11dp"

            android:layout_weight="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scaleType="centerInside"
            android:src="@drawable/imageview6" />


        <TextView
            android:id="@+id/textViewTip6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView6"
            android:layout_weight="2"
            android:text="@string/extraction_time"
            android:textColor="@color/Sienna" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textViewTip6"
            android:background="@color/Sienna"
            android:padding="8dp"
            android:onClick="sendMessage"
            android:text="@string/sendMessage"
            android:textColor="@color/White"
            android:textSize="12sp"/>


    </RelativeLayout>
</ScrollView>
